# bevy_tweening

./: .gitattributes  .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE2  README.md  release.md  run_examples.bat  run_examples.sh  rustfmt.toml
.github/workflows/: ci.yaml
benchmarks/: Cargo.toml
benchmarks/benches/: lens.rs
benchmarks/src/: lib.rs
docs/: migration-guide-0.14.md
examples/: ambient_light.rs  colormaterial_color.rs  custom_relative_lens.rs  follow.rs  menu.rs  menu_hover.rs  sequence.rs  sprite_color.rs  text_color.rs  transform_marker.rs  transform_rotation.rs  transform_translation.rs  ui_position.rs
examples/utils/: mod.rs
src/: color_vec4_ext.rs  lens.rs  lib.rs  plugin.rs  test_utils.rs  tweenable.rs
testdata/: tween_tick_loop_finite.stdout  tween_tick_loop_finite_large_jump.stdout  tween_tick_loop_infinite_large_jump.stdout  tween_tick_loop_partial_completion.stdout  tween_tick_loop_ping_pong.stdout  tween_tick_with_defaults_going_Backward.stdout  tween_tick_with_defaults_going_Forward.stdout
