[package]
name = "bevy_tweening"
version = "0.13.0"
authors = [
    "François Mockers <mockersf@gmail.com>",
    "Jerome Humbert <djeedai@gmail.com>",
]
edition = "2021"
description = "Tweening animation plugin for the Bevy game engine"
repository = "https://github.com/djeedai/bevy_tweening"
homepage = "https://github.com/djeedai/bevy_tweening"
documentation = "https://docs.rs/bevy_tweening"
keywords = ["bevy", "animation", "easing", "tweening"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["examples/*.gif", ".github", "release.md", "run_examples.bat"]

[features]
default = ["bevy_sprite", "bevy_ui", "bevy_asset", "bevy_text"]
# Enable support for Asset animation
bevy_asset = ["bevy/bevy_asset"]
# Enable built-in lenses for Bevy sprites
bevy_sprite = ["bevy/bevy_sprite", "bevy/bevy_render"]
# Enable built-in lenses for Bevy UI
bevy_ui = ["bevy/bevy_ui", "bevy/bevy_render"]
# Enable built-in lenses for Bevy Text
bevy_text = ["bevy/bevy_text", "bevy/bevy_render", "bevy/bevy_sprite"]

[dependencies]
# Note: abuse 'bevy_color' to force 'bevy_math/curve' feature, which defines EaseFunction
bevy = { version = "0.16", default-features = false, features = [ "bevy_color" ]}

[dev-dependencies]
bevy-inspector-egui = { version = "0.31" }

[[example]]
name = "menu"
required-features = ["bevy_ui", "bevy_text", "bevy/bevy_winit", "bevy/bevy_picking"]

[[example]]
name = "colormaterial_color"
required-features = ["bevy_asset", "bevy_sprite", "bevy/bevy_winit", "bevy/bevy_picking"]

[[example]]
name = "sprite_color"
required-features = ["bevy_sprite", "bevy/bevy_winit", "bevy/bevy_picking"]

[[example]]
name = "transform_translation"
required-features = ["bevy_sprite", "bevy/bevy_winit", "bevy/bevy_picking"]

[[example]]
name = "transform_rotation"
required-features = ["bevy_sprite", "bevy/bevy_winit", "bevy/bevy_picking"]

[[example]]
name = "ui_position"
required-features = ["bevy_sprite", "bevy_ui", "bevy/bevy_winit", "bevy/bevy_picking"]

[[example]]
name = "text_color"
required-features = ["bevy_ui", "bevy_text", "bevy/bevy_winit", "bevy/bevy_picking"]

[[example]]
name = "sequence"
required-features = ["bevy_sprite", "bevy_text", "bevy/bevy_winit", "bevy/bevy_picking"]

[workspace]
resolver = "2"
members = [".", "benchmarks/"]
